      will also be issued). Nevertheless, users are *strongly* encouraged
      to upgrade to py-bcrypt 0.3 or another bcrypt library if you are using
      the :doc:`bcrypt </lib/passlib.hash.bcrypt>` hash.

    * :class:`~passlib.hash.scrypt` -- New password hash format which uses
      the SCrypt KDF (:issue:`8`).

Minor Internal Changes
----------------------
    * The shared :class:`!PasswordHash` unittests now check all hash handlers for
      basic thread-safety (motivated by the pybcrypt 0.2 concurrency bug).

    * Most of passlib's internal cryptography helpers have been moved from
      :mod:`!passlib.utils` to :mod:`passlib.crypto`, and the APIs refactored.
      This allowed unification of various hash management routines,
      some speed ups to the HMAC and PBKDF2 primitives, and opens up the architecture
      to support more optional backend libraries.

      Compatibility wrappers will be kept in place at the old location until Passlib 2.0.

    * The majority of CryptContext's internal rounds handling & migration code has been
      moved to the password hashes themselves, via the new :meth:`~passlib.ifc.PasswordHash.using`
      and :meth:`~passlib.ifc.PasswordHash.needs_update` methods.  This allows much more flexibility
      when using a hash directly, rather than via CryptContext, as well making it easier for
      CryptContext to support hash-specific parameters.

Deprecations
------------
    * The :class:`~passlib.ifc.PasswordHash` API (used by all hashes in passlib),
      has had a number of cleanups made:

        * :meth:`!encrypt` has been renamed to :meth:`~passlib.ifc.PasswordHash.hash`,
          to clarify that it's performing one-way hashing rather than encryption.
          A compatibility alias will remain in place until Passlib 2.0.
          This should fix the longstanding :issue:`21`.

        * The little-used methods :meth:`~passlib.ifc.PasswordHash.genhash` and